2021-11-26  Dirk Eddelbuettel  <edd@debian.org>

	* README.md: Expanded

2021-11-22  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION: Initial minimal version 0.0.1